@@ -69,6 +69,7 @@ EXPORTS
 	ADOCSETFLOATARRAY
 	PIPGETBOOLEAN
 	sliceEdgeMean
+	AdocOrderWriteByValue
 	PipStartsWith
 	FINDHISTOGRAMDIP
 	ADOCSETTWOFLOATS
@@ -454,6 +455,7 @@ EXPORTS
 	PipGetFloatArray
 	XCorrPeakFindWidth
 	statMatrices
+	ADOCORDERWRITEBYVALUE
 	ADOCSETINTEGERARRAY
 	WRAPFFTSLICE
 	slicePutVal
